[gd_scene load_steps=6 format=2]

[ext_resource path="res://BattlePhase/Interface/LightHeavySpecialTextBox.gd" type="Script" id=1]
[ext_resource path="res://Fonts/LuckiestGuy.ttf" type="FontFile" id=2]
[ext_resource path="res://OLDBattlePhase/TextBox.tscn" type="PackedScene" id=3]

[sub_resource type="FontFile" id=1]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=2]
size = 15
font_data = ExtResource( 2 )

[node name="TextBox" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="Text 1" parent="." index="0"]
theme_override_fonts/font = SubResource( 1 )
text = "SPECIAL"

[node name="Text 2" parent="." index="1"]
text = "LIGHT"

[node name="Text 3" parent="." index="2"]
text = "BACK"

[node name="Text 4" parent="." index="3"]
theme_override_fonts/font = SubResource( 2 )
text = "HEAVY"
[connection signal="pressed" from="Text 1" to="." method="_on_Special_pressed"]
[connection signal="pressed" from="Text 2" to="." method="_on_Light_pressed"]
[connection signal="pressed" from="Text 3" to="." method="_on_Back_pressed"]
[connection signal="toggled" from="Text 3" to="." method="_on_Back_toggled"]
[connection signal="pressed" from="Text 4" to="." method="_on_Heavy_pressed"]
[connection signal="toggled" from="Text 4" to="." method="_on_Heavy_toggled"]
